--- a/src/main/webapp/Hola.xhtml
+++ b/src/main/webapp/Hola.xhtml
@@ -6,6 +6,7 @@ xmlns:f="http://xmlns.jcp.org/jsf/core">
 	<f:view>
 		<h:head>
 			<title> Aplicación JavaServer Faces </title>
+			<h:outputScript library="js" name="infoJavaScript.js" />
 		</h:head>
 		<h:body>
 			<h:form>
@@ -13,6 +14,9 @@ xmlns:f="http://xmlns.jcp.org/jsf/core">
 					<h:outputText value="#{login.nombre}"/>!
 				</h3>
 				<p>Fecha: <h:outputText value="#{login.fecha}"/></p>
+				<h:commandButton value="Aceptar"
+					onclick="showMessage('No está definido donde ir')" >
+				</h:commandButton>
 			</h:form>
 		</h:body>
 	</f:view>
