--- a/src/main/webapp/Pirata.xhtml
+++ b/src/main/webapp/Pirata.xhtml
@@ -6,6 +6,7 @@ xmlns:f="http://xmlns.jcp.org/jsf/core">
 	<f:view>
 		<h:head>
 			<title> Aplicación JavaServer Faces </title>
+			<h:outputStylesheet library="css" name="style.css" />
 		</h:head>
 		<h:body>
 			<h:form>
