--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -9,95 +9,43 @@
 		<title>Aplicación JavaServer Faces</title>
 	</h:head>
 	<h:body>
-		<h:form id="miForm">
+		<h:form>
 			<h3>Por favor, introduce tu nombre y tu contraseña</h3>
 			<table>
 				<tr>
 					<td>Nombre:</td>
-					<td>
-						<h:inputText id="nombre" value="#{login.nombre}">
-							<f:validateRegex pattern="^(([a-z]|[A-Z])+[0-9]?)$"/>
-						</h:inputText>
-					</td>
+					<td><h:inputText id="nombre" value="#{login.nombre}">
+							<f:validateRegex pattern="^(([a-z]|[A-Z])+[0-9]?)$" />
+						</h:inputText></td>
+					<td><h:message for="nombre" style="color:red" /></td>
 				</tr>
 				<tr>
 					<td>Contraseña:</td>
-					<td>
-						<h:inputSecret id="pass" redisplay="true" value="#{login.password}">
+					<td><h:inputSecret id="pass" value="#{login.password}">
 							<f:validateLongRange minimum="1" maximum="500" />
-							<f:ajax execute="pass" render="mensajes"/>
-						</h:inputSecret>
-					</td>
+						</h:inputSecret></td>
 					<td><h:message for="pass" style="color:red" /></td>
 				</tr>
 				<tr>
-					<!-- 
 					<td>Fecha (dd/MM/yyyy):</td>
-					<td>
-						<h:inputText id="data" value="#{login.fecha}">
-							<f:convertDateTime pattern="dd/MM/yyyy"/>
-						</h:inputText>
-					</td>
-					<td><h:message for="data" style="color:red" /></td>
-					-->
-					<td>Fecha (con PrimeFaces):</td>
-					<td>
-						<p:calendar id="fecha" value="#{login.fecha}" navigator="true"
-							pattern="dd/MM/yyyy" showOn="button">
+					<td><p:calendar id="fecha" value="#{login.fecha}"
+							navigator="false" pattern="dd/MM/yyyy" mode="inline">
 							<p:ajax event="dateSelect" listener="#{login.onDateSelect}"
 								update="mensajes"></p:ajax>
-						</p:calendar>
-					</td>
+						</p:calendar></td>
 				</tr>
 				<tr>
-					<td><h3>Tipo de usuario: </h3></td>
-					<td>
-						<h:selectOneMenu id="lista" value="#{login.tipo}" converter="omnifaces.SelectItemsConverter">
-							<f:selectItems value="#{login.tipos}"/>
-							<f:ajax event="change" listener="#{login.listener}" render="mensajes" />
-						</h:selectOneMenu>
-					</td>
-				</tr>
-				<tr>
-					<h:dataTable id="tabla" value="#{login.tipos}" var="item" border="1">
-						<f:facet name="header">Tipos de usuario:</f:facet>
-						<h:column>
-							<f:facet name="header"></f:facet>
-							<h:commandButton value="Escoger" action="#{login.setTipo(item)}"/>
-						</h:column>
-						<h:column>
-							<f:facet name="header">Código</f:facet>
-							#{item.codigo}
-						</h:column>
-						<h:column>
-							<f:facet name="header">Tipo</f:facet>
-							#{item.tipoUsu}
-						</h:column>
-					</h:dataTable>
-				</tr>
-				<tr>
-					<td>
-						<p:dataTable id="tablaPF" value="#{login.tipos}" var="item" selectionMode="single"
-						selection="#{login.tipo}" border="1" rowKey="#{item.codigo}">
-							<p:ajax event="rowSelect" listener="#{login.onEventSelect}"
-							update=":miForm:escogido :miForm:mensajes :miForm:lista"></p:ajax>
-							<f:facet name="header">Tipo de Usuario:</f:facet>
-							<p:column headerText="Código">#{item.codigo}</p:column>
-							<p:column headerText="Tipo">#{item.tipoUsu}</p:column>
-						</p:dataTable>
-					</td>
-					<td><h:outputText id="escogido" value="#{login.tipo}" style="color:red" /></td>
+					<td><h3>Tipo de usuario:</h3></td>
+					<td><h:selectOneMenu value="#{login.tipo}"
+							converter="TipoUsuarioConverter">
+							<f:selectItems value="#{login.tipos}" />
+						</h:selectOneMenu></td>
 				</tr>
 			</table>
 			<p>
 				<h:commandButton value="Aceptar" action="#{login.comprobar}" />
-				<h:commandButton value="Pirata" immediate="true" action="error"
-					onclick="if (!confirm('¿Estás seguro?')) return false">
-				</h:commandButton>
 			</p>
-			<p>
-				<h:messages id="mensajes" style="color:blue"/>
-			</p>
+			<h:messages id="mensajes" style="color:blue" />
 		</h:form>
 	</h:body>
 </f:view>
